--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-react": "^7.6.3",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
+    "braces": "^2.3.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "google-map-react": "^1.1.5",
